# portfolio

./: Cargo.toml  package.json  pnpm-lock.yaml  start.sh  tailwind.config.js
assets/: main.css
assets/markdown/: LSTMs.md  activation-functions.md  back-propogation.md  cost-functions.md  cross-entropy.md  gradient-descent.md  multi-class-activation-functions.md  mutli-layer-perceptron-model.md  perceptron-model.md  recurrent-neural-networks.md
assets/markdown/neural-networks-basics/: LSTMs.md  activation-functions.md  cost-functions.md  cross-entropy.md  gradient-descent.md  multi-class-activation-functions.md  mutli-layer-perceptron-model.md  perceptron-model.md  recurrent-neural-networks.md
assets/markdown/neural-networks-proofs/: categorical-cross-entropy-loss.md  ccle-&-softmax-combined.md  softmax-activation-function.md  stochastic-gradient-descent.md
settings/: settings.toml
src/: config.rs  main.rs  markdown.rs  routes.rs  templates.rs
templates/: base.html  hello.html  notes.html  todo-form.html
templates/components/: header.html
