[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ammonia = "3.3.0"
askama = { version = "0.12.1", features = ["markdown"] }
axum = "0.7.2"
latex2mathml = "0.2.3"
markup = "0.15.0"
once_cell = "1.19.0"
pulldown-cmark = "0.9.3"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["serde_derive"]}
tokio = { version = "1.35.1", features = ["full"] }
tokio-macros = "2.1.0"
toml = "0.8.8"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
